# libvirt-node

./: .gitignore  Cargo.toml  LICENSE  index.d.ts  index.js  infinibay-libvirt-node-0.0.1.tgz  package-lock.json  package.json  quick_test.ts  tsconfig.json
__test__/: index.spec.js
benchmark/: bench.ts
src/: connection.rs  domain_stats_record.rs  enums.rs  error.rs  guest_agent.rs  interface.rs  lib.rs  machine.rs  network.rs  node_device.rs  node_info.rs  nw_filter.rs  old_lib.rs  secret.rs  snapshot.rs  storage_pool.rs  storage_vol.rs  traits.rs
