[package]
authors = ["Andres Jose Borek <andres.b.dev@gmail.com>"]
edition = "2021"
name    = "libvirt-node-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "2", features = [
  "tokio_rt",
  "serde-json",
  "compat-mode",
	"napi6",
] }
napi-derive = "2"
virt        = "0.3.1"
thiserror   = "1.0.30"
anyhow      = "1.0.55"
serde       = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["std", "serde"] }

[build-dependencies]
napi-build = "2"
napi-sys = "0.1.0"

[profile.release]
lto = true